<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/androidsmall_24"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.auth.LoginActivity">

        <ImageView
            android:id="@+id/iv_Login"
            android:layout_width="352dp"
            android:layout_height="288dp"
            android:contentDescription="@string/imageview_login"
            app:layout_constraintBottom_toTopOf="@+id/tfLayout_Email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
            app:layout_constraintVertical_bias="0.291"
            app:srcCompat="@drawable/solnet_340x1561" />

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_mail"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_Email"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_Email"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_email"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_password"
            android:src="@drawable/ic_key"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@id/tfLayout_Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tfLayout_Password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_Password"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            app:boxBackgroundMode="none"
            app:endIconDrawable="@drawable/ic_invisible"
            app:endIconMode="custom"
            app:endIconTint="#279eff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_password"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_Email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/forgot_password"
            android:visibility="gone"
            app:tint="@color/solnet_blue_600"
            android:fontFamily="@font/ubuntu_regular"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_Password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="70dp"

            android:background="@drawable/button_primary"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_ForgotPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/button_secondary"
            android:text="@string/register"
            android:textColor="@color/solnet_blue_800"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.49"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.09"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
