<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_fillFormPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:text="Pendaftaran"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="@font/ubuntu_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tfLayout_Email"/>

        <ImageView
            android:id="@+id/iv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_mail"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_Email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_Email"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_Email"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_email"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_fillFormPrompt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_FullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_person"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_FullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_FullName"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_FullName"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_fullname"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_FullName"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_FullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_phone"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_Phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_Phone"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_Phone"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_phone"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_FullName"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_FullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="text|phone"/>
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/iv_Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_map"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/spinner_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spinner_location"
            app:layout_goneMarginTop="16dp" />

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_secondary"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_Map"
            app:layout_constraintTop_toBottomOf="@id/tfLayout_Phone"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_idPelangganPrompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:text="Data Teknisi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_location"
            app:layout_goneMarginTop="16dp" />

        <TextView
            android:id="@+id/tv_IdPelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="NIK"
            android:textSize="18sp"
            android:fontFamily="@font/ubuntu_regular"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_IdPelanggan"
            app:layout_constraintEnd_toStartOf="@id/tfLayout_IdPelanggan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_IdPelanggan"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_IdPelanggan"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_idPelanggan"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_IdPelanggan"
            app:layout_constraintTop_toBottomOf="@+id/tv_idPelangganPrompt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_IdTeknisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="text|number"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_Pass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_lock"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_Password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_Password"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_Password"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_password"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_Pass1"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_IdPelanggan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_Pass2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon_username"
            android:src="@drawable/ic_lock"
            app:tint="@color/solnet_blue_600"
            app:layout_constraintBottom_toBottomOf="@+id/tfLayout_PasswordConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfLayout_PasswordConfirm"
            app:layout_goneMarginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfLayout_PasswordConfirm"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/text_passwordConfirm"
            app:boxBackgroundMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_Pass2"
            app:layout_constraintTop_toBottomOf="@+id/tfLayout_Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfEdit_PasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/button_primary"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tfLayout_PasswordConfirm" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>